--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"yarn run backend\" \"yarn run frontend\"",
     "backend": "cmd /C \"venv\\Scripts\\activate && python app.py\"",
     "frontend": "next dev",
     "build": "next build",
